# Trabalho-Individual-2022-2-

./: Dockerfile  docker-compose.yaml  pyproject.toml
src/: dockerfile
