[tool.poetry]
name = "poetry-victordscabral-GCES"
version = "0.1.0"
description = "Trabalho individual de GCES"
authors = ["Victor Cabral <victorcabral2501@gmail.com>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
